force-app/main/default/objects/Interest_Waiver__c/Interest_Waiver__c.object-meta.xml
<CustomObject>
    <label>Interest Waiver</label>
    <nameField>
        <displayFormat>IW-{000000}</displayFormat>
        <label>Interest Waiver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>