force-app/main/default/objects/Interest_Waiver__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved By Project Lead</fullName>
            </value>
            <value>
                <fullName>Approved By CRM Head</fullName>
            </value>
            <value>
                <fullName>Approved By CEO</fullName>
            </value>
            <value>
                <fullName>Rejected By Project Lead</fullName>
            </value>
            <value>
                <fullName>Rejected By CRM Head</fullName>
            </value>
            <value>
                <fullName>Rejected By CEO</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending CEO Approval</fullName>
                <isActive>false</isActive>
                <label>Pending CEO Approval</label>
            </value>
            <value>
                <fullName>Pending CRM Head Approval</fullName>
                <isActive>false</isActive>
                <label>Pending CRM Head Approval</label>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
                <isActive>false</isActive>
                <label>Submit for Approval</label>
            </value>
            <value>
                <fullName>Submitted to Project Lead</fullName>
                <isActive>false</isActive>
                <label>Submitted to Project Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>