force-app/main/default/objects/Interest_Waiver__c/fields/Balance_Installment__c.field-meta.xml
<CustomField>
    <fullName>Balance_Installment__c</fullName>
    <formula>Demand__r.Booking__r.RW_Total_Collectable_Interest__c -  Waiver_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>