force-app/main/default/objects/Interest_Waiver__c/fields/CEO_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CEO_Approved_Date__c</fullName>
    <label>L3 Approved Date</label>
    <type>Date</type>
</CustomField>