force-app/main/default/objects/Interest_Waiver__c/fields/CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interest_Waivers1</relationshipName>
    <type>Lookup</type>
</CustomField>