force-app/main/default/objects/Interest_Waiver__c/fields/CRM_Head_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Head_Approved_Date__c</fullName>
    <label>L2 Approved Date</label>
    <type>Date</type>
</CustomField>