force-app/main/default/objects/Interest_Waiver__c/fields/CRM_Head_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Head_Id__c</fullName>
    <formula>CRM_Head__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Head Id</label>
    <type>Checkbox</type>
</CustomField>