force-app/main/default/objects/Interest_Waiver__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <label>Demand</label>
    <referenceTo>RW_Demand__c</referenceTo>
    <relationshipLabel>Interest Waivers</relationshipLabel>
    <relationshipName>Interest_Waivers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>