force-app/main/default/objects/Interest_Waiver__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <formula>Demand__r.Booking__r.RW_Total_Collectable_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>