force-app/main/default/objects/Interest_Waiver__c/fields/IOM_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>IOM_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IOM Uploaded</label>
    <type>Checkbox</type>
</CustomField>