force-app/main/default/objects/Interest_Waiver__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <formula>ISBLANK(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>