force-app/main/default/objects/Interest_Waiver__c/fields/L2_Approval_Ageing__c.field-meta.xml
<CustomField>
    <fullName>L2_Approval_Ageing__c</fullName>
    <formula>CRM_Head_Approved_Date__c  -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L2 Approval Ageing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>