force-app/main/default/objects/Interest_Waiver__c/fields/Net_Interest_Post_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Net_Interest_Post_Waiver__c</fullName>
    <formula>Demand__r.Net_Interest_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Interest Post Waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>