force-app/main/default/objects/Interest_Waiver__c/fields/PL_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PL_Approved_Date__c</fullName>
    <label>L1 Approved Date</label>
    <type>Date</type>
</CustomField>