force-app/main/default/objects/Interest_Waiver__c/fields/PL_Name__c.field-meta.xml
<CustomField>
    <fullName>PL_Name__c</fullName>
    <formula>Project_Lead__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL Name</label>
    <type>Text</type>
</CustomField>