force-app/main/default/objects/Interest_Waiver__c/fields/Previously_Waived_Amount_SAP__c.field-meta.xml
<CustomField>
    <fullName>Previously_Waived_Amount_SAP__c</fullName>
    <label>Previously Waived Amount (SAP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>