force-app/main/default/objects/Interest_Waiver__c/fields/Profile_lead_id__c.field-meta.xml
<CustomField>
    <fullName>Profile_lead_id__c</fullName>
    <formula>Project_Lead__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile lead id</label>
    <type>Checkbox</type>
</CustomField>