force-app/main/default/objects/Interest_Waiver__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <formula>TEXT(Demand__r.Booking__r.Project__r.Project_Location__r.Location__c)</formula>
    <label>Project Location</label>
    <type>Text</type>
</CustomField>