force-app/main/default/objects/Interest_Waiver__c/fields/Slab_Description__c.field-meta.xml
<CustomField>
    <fullName>Slab_Description__c</fullName>
    <label>Slab Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>