force-app/main/default/objects/Interest_Waiver__c/fields/Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason__c</fullName>
    <label>Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Waiver_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>One time goodwill</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Medical exigency</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Humanitarian grounds</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Management Reference</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Transfer of Unit within Project</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Transfer Case for another Runwal Project</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Case escalation</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Bank Issue</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Erroneous Interest Calculation</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>RERA escalation</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Delay in payment processing</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Critical Retention Effort (Difficult-to-Sell Unit)</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Work Incompletion</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Delay in documentation</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Job loss</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Bereavement</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Delay in credit notes</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Customer Cancelled</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Extension of payment</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Change in payment plan</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Special Interest Waiver</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Less than 50K</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Taxes Mismatch</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Approval related</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Bank Delay</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Conditional Sale of Property</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Financial constraints</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Delay in Funds transfer</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Construction mismatch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>