force-app/main/default/objects/Interest_Waiver__c/fields/Total_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Balance__c</fullName>
    <formula>Demand__r.Booking__r.RW_Total_Amount_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>