force-app/main/default/objects/Interest_Waiver__c/fields/Total_Interest_Amount_Waived__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount_Waived__c</fullName>
    <formula>Demand__r.Booking__r.RW_Total_Interest_Amount_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Amount Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>