force-app/main/default/objects/Interest_Waiver__c/fields/Total_Interest_Levied_on_Demand__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Levied_on_Demand__c</fullName>
    <formula>Demand__r.Total_Interest_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Levied on Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>