force-app/main/default/objects/Interest_Waiver__c/fields/Waiver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Amount__c</fullName>
    <label>Waiver Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>