force-app/main/default/objects/Interest_Waiver__c/fields/Waiver_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Approval_Level__c</fullName>
    <formula>IF(
  OR(
    AND(
     (Project_Location__c = &quot;Mumbai&quot;),
      Waiver_Amount__c &lt;= 100000
    ),
    AND(
      (Project_Location__c = &quot;Dombivali&quot;),
      Waiver_Amount__c &lt;= 50000
    )
  ),
  &quot;Level 1&quot;,

  IF(
    OR(
      AND(
        (Project_Location__c = &quot;Mumbai&quot;),
        Waiver_Amount__c &lt;= 200000
      ),
      AND(
        (Project_Location__c = &quot;Dombivali&quot;),
        Waiver_Amount__c &lt;= 100000
      )
    ),
    &quot;Level 2&quot;,

    IF(
      OR(
        AND(
          (Project_Location__c = &quot;Mumbai&quot;),
          Waiver_Amount__c &gt; 200000
        ),
        AND(
          (Project_Location__c = &quot;Dombivali&quot;),
          Waiver_Amount__c &gt; 100000
        )
      ),
      &quot;Level 3&quot;,
      &quot;Not Applicable&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiver Approval Level</label>
    <type>Text</type>
</CustomField>