force-app/main/default/objects/Interest_Waiver__c/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <label>Waiver Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal Delay</fullName>
            </value>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>