force-app/main/default/objects/Interest_Waiver__c/validationRules/Remark_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Remark_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Sub_Reason__c, &apos;Others&apos;) ,
 ISBLANK(Remarks__c)
)</errorConditionFormula>
    <errorDisplayField>Remarks__c</errorDisplayField>
    <errorMessage>Please specify other reason in remarks.</errorMessage>
</ValidationRule>