force-app/main/default/objects/Interest_Waiver__c/listViews/Interest_Waivers_Approval_Pending.listView-meta.xml
<ListView>
    <fullName>Interest_Waivers_Approval_Pending</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Interest_Days__c</columns>
    <columns>Demand__c</columns>
    <columns>Interest_Amount__c</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <filters>
        <field>Profile_lead_id__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Interest Waivers Approval Pending</label>
</ListView>